tests/neg-custom-args/captures/i23582.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/i23582.scala:28:6 --------------------------------------
28 |      write(x) // error
   |      ^^^^^
   |Reference `write` is not included in the allowed capture set {any.only[Read]}
   |of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
   |
   |where:    any is a root capability created in method test when checking argument to parameter op of method parReduce
